Codacy fixes #8565 (#8566)
* Codacy fixes #8565
Irregular whitespace not allowed.

* Codacy fixes #8565
Unused import

* Codacy fixes #8565
Json duplicate field

* Codacy fixes #8565
Expected indentation of 2 spaces (indentation)
Expected newline after "," (selector-list-comma-newline-after)

* Codacy fixes #8565
Avoid calling toString()

* Codacy fixes #8565
String.trim().length() == 0 / String.trim().isEmpty() is an inefficient way to validate a blank String.

* Codacy fixes #8565
Non-static initializers are confusing

* Codacy fixes #8565
A switch statement does not contain a break

* Codacy fixes #8565
Use equals() to compare object references.

* Codacy fixes #8565
Method call on object which may be null

* Codacy fixes #8565
assertTrue(!expr) can be replaced by assertFalse(expr)

* Codacy fixes #8565
Unnecessary use of fully qualified name