@@ -31,7 +31,7 @@ public final class ApplicationKey
     private ApplicationKey( final String name )
     {
         Preconditions.checkNotNull( name, "ApplicationKey cannot be null" );
-        Preconditions.checkArgument( !name.trim().isEmpty(), "ApplicationKey cannot be blank" );
+        Preconditions.checkArgument( !name.isBlank(), "ApplicationKey cannot be blank" );
         this.name = CharacterChecker.check( name, "Not a valid ApplicationKey [" + name + "]" );
     }
 
